--- a/0706.2661/harrigan_spekkens.tex
+++ b/0706.2661/harrigan_spekkens.tex
@@ -1,4 +1,22 @@
-\documentclass[aps,twocolumn,nofootinbib]{revtex4}
+\documentclass[aps,nofootinbib,12pt]{revtex4}
+\usepackage{mathpazo}
+\linespread{1.1}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\sloppy
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -36,7 +54,6 @@
 
 
 \begin{document}
-\preprint{ }
 \title{Einstein, incompleteness, and the epistemic view of quantum states}
 \author{Nicholas Harrigan}
 \affiliation{QOLS, Blackett Laboratory, Imperial College London,
@@ -175,9 +192,9 @@ information [...]. His argument was simply that a quantum-state
 assignment for a system can be forced to go one way or the other by
 interacting with a part of the world that should have no causal
 connection with the system of interest.'' \cite{Fuchs_Eepistemic}.
-%The point is also made by one of the authors: "Einstein’s argument
+%The point is also made by one of the authors: "Einsteinï¿½s argument
 %for the incompleteness of quantum mechanics which is most clear in
-%his correspondence with Schrödinger [...] is an argument for an
+%his correspondence with Schrï¿½dinger [...] is an argument for an
 %epistemic view of quantum states"
 One of the main goals of the present article is to lend further
 support to this thesis by clarifying the relevant concepts and by
@@ -1522,7 +1539,7 @@ instance, in his 1935 letter to Schr\"{o}dinger, he remarks: ``I
 couldn't care less\footnote{``ist mir \textit{wurst}'' (emphasis in
 original).} whether $\psi_{B}$ and $\psi_{\underline{B}}$ can be
 understood as eigenfunctions of observables $B$,
-$\underline{B}$''.”\cite{EtoS1935}
+$\underline{B}$'' \cite{EtoS1935}.
 
 %He proceeds to identify the crucial
 %aspect of the exposition as the fact that ``\textit{[t]he real state
