--- a/0708.4025v2/black-hole-mirror-rev.TEX
+++ b/0708.4025v2/black-hole-mirror-rev.TEX
@@ -1,12 +1,30 @@
 %\documentclass[10pt,twocolumn]{article}
 %%% CALT-68-2659
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \input{epsf}
 \setlength{\topmargin}{-0.5truein}
 \setlength{\oddsidemargin}{0truein}
 \setlength{\textheight}{9truein}
 \setlength{\textwidth}{6.5truein}
 
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[letterpaper, margin=1.25in]{geometry}
+\sloppy
 
 \begin{document}
 \title{\bf Black holes as mirrors: \\quantum information in random subsystems}
@@ -93,7 +111,8 @@ How soon will Bob be able to recover Alice's memory from the Hawking radiation? 
 \leavevmode
 \epsfxsize=3.5in
 \epsfbox{black-hole-retrieval4.eps}
-\end{center}\caption{Information retrieval from an evaporating black hole. The black hole, which has been evaporating for a long time, has become maximally entangled with the previously emitted radiation system $E$. At this stage, the black hole swallows Alice's quantum memory $M$, which is maximally entangled with Charlie's reference system $N$. The internal dynamics of the black hole applies a strongly mixing unitary transformation $V^B$, and then the additional radiation system $R$ is emitted, where the dimension of $R$ is somewhat larger than the dimension of $M$. Now a subsystem of $RE$, controlled by Bob, is nearly maximally entangled with $N$ --- the content of Alice's quantum memory has escaped from the black hole and is in Bob's possession.}
+\end{center}
+\caption{Information retrieval from an evaporating black hole. The black hole, which has been evaporating for a long time, has become maximally entangled with the previously emitted radiation system $E$. At this stage, the black hole swallows Alice's quantum memory $M$, which is maximally entangled with Charlie's reference system $N$. The internal dynamics of the black hole applies a strongly mixing unitary transformation $V^B$, and then the additional radiation system $R$ is emitted, where the dimension of $R$ is somewhat larger than the dimension of $M$. Now a subsystem of $RE$, controlled by Bob, is nearly maximally entangled with $N$ --- the content of Alice's quantum memory has escaped from the black hole and is in Bob's possession.}
 \label{fig:retrieval}
 \end{figure}
 
@@ -229,7 +248,8 @@ Therefore we should ask: if Alice's quantum state persists behind the horizon an
 \leavevmode
 \epsfxsize=4.5in
 \epsfbox{black-hole-cloning5.eps}
-\end{center}\caption{Alice and Bob test whether an evaporating black hole clones quantum information. Alice, carrying her quantum memory, drops into the black hole. Bob recovers the content of Alice's memory from the Hawking radiation, and then enters the black hole, too. Alice sends her qubits to Bob, and Bob verifies that cloning has occurred.}
+\end{center}
+\caption{Alice and Bob test whether an evaporating black hole clones quantum information. Alice, carrying her quantum memory, drops into the black hole. Bob recovers the content of Alice's memory from the Hawking radiation, and then enters the black hole, too. Alice sends her qubits to Bob, and Bob verifies that cloning has occurred.}
 \label{fig:cloning}
 \end{figure}
 
