--- a/1008.1911/waterfall.tex
+++ b/1008.1911/waterfall.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%% Uses Revtex 4 and epsf for figures included in text %%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[aps%,twocolumn
+\documentclass[12pt,aps%,twocolumn
 ]{revtex4}
 \usepackage{graphicx}   % need for figures
 \usepackage{subfigure}  % use for side-by-side figures
@@ -29,6 +29,24 @@
     \bigskip
     }
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 \begin{document}
 \title{Measurement of stimulated Hawking emission in an analogue system
@@ -83,8 +101,7 @@ g_H}\right)
 where $g_H$ is the surface gravity of the black hole [1-4]. Positive norm modes are emitted, while
 negative ones are absorbed by the black hole, effectively reducing its mass.
 The surface gravity for a non-rotating black hole with a mass $M$ is given by
-$g_H
-= 1.0×1035/M [{\rm kg/s}]$. Equation (1) is applicable for both stimulated and
+$g_H = 1.01035/M [{\rm kg/s}]$. Equation (1) is applicable for both stimulated and
 spontaneous emission, and at regimes where the quantum physics is dominant. A
 comparison of (1) with the Boltzmann-distribution allows one to associate a
 temperature $T$ with the black hole, 
@@ -150,7 +167,7 @@ water waves ($k^+_{out}$  and $k^-_{out}$) that are swept downstream.
 \end{center}
 \end{figure}
 
-In [9] Schützhold and Unruh argued that the equation of motion of shallow
+In [9] Schtzhold and Unruh argued that the equation of motion of shallow
 water waves can be cast into a wave equation on a curved spacetime background
 if the speed of the background flow varies. Assuming a steady, incompressible
 flow the velocity
@@ -255,7 +272,7 @@ transform of the noise match the dispersion relation for this flow ($q = 0.039
 m^2/s$ and $h = 0.24 m$) extremely well (Fig.\ 3b). In general, the amplitude of
 the Fourier components has a noise level of less than 0.2 mm away from the
 dispersion curves. The apparently elevated noise energy crossing the k axis at
-$f = ± 3.1$ Hz is due to the second transverse mode branch of the dispersion
+$f = \pm 3.1$ Hz is due to the second transverse mode branch of the dispersion
 relation (the first transverse mode has a node at the location of the light
 sheet).
 
@@ -428,7 +445,7 @@ project. WGU and GAL thank the Natural Sciences and Engineering Research
 Council for grants which supported this work. WGU thanks the Canadian
 Institute for Advanced Research, and GAL thanks the Canada Research Chairs
 program, for their support of this research. SW was supported by a Marie Curie
-Fellowship EMERGENT- 2007-SW. We thank Piyush Jain and Ralf Schützhold for
+Fellowship EMERGENT- 2007-SW. We thank Piyush Jain and Ralf Schtzhold for
 comments on the final manuscript and Trevor Guerard for help with fig 2. We thank the Department of Civil Engineering
 for the use of the flume and experimental space, which displaced undergraduate
 teaching. Their willingness to make do with other equipment and space made our
@@ -463,14 +480,14 @@ American {\bf 292},
 {\bf 46},
 1351-1353 (1981).
 
-\bibitem {7}Barceló, C. \& Liberati, S. \& Visser M. Analogue gravity. Matt
+\bibitem {7}Barcel, C. \& Liberati, S. \& Visser M. Analogue gravity. Matt
 Living Rev. {\bf 8},
 12 (2005).
 
 \bibitem {8}Jacobson, T. A. \& Parentani, R. An echo of black holes. Scientific American
 {\bf 17}, 12-19 (2007).
 
-\bibitem {9}Schützhold, R. \& Unruh, W.G. Gravity wave analogs of black holes.
+\bibitem {9}Schtzhold, R. \& Unruh, W.G. Gravity wave analogs of black holes.
 Phys. Rev.{\bf D 66}, 044019 (2002).
 
 
@@ -493,7 +510,7 @@ Mod. Phys. {\bf 12}, 649-661 (2003).
 the Transformation of Regular Gravity-Capillary Waves on Inhomogeneous Flows.
 Izvestiya, Atmospheric and Oceanic Physics {\bf 19}, 10 (1083).
 
-\bibitem {16}Rousseaux, G., Maïssa, P., Mathis, C., Coullet, P., Philbin, T. G. \&
+\bibitem {16}Rousseaux, G., Massa, P., Mathis, C., Coullet, P., Philbin, T. G. \&
 Leonhardt, U. Horizon effects with surface waves on moving water. arXiv:
 1004.5546v1 [gr-qc].
 
@@ -503,7 +520,7 @@ The Netherlands Online at http://repository.tudelft.nl/file/275166/201607
 \bibitem {18}Unruh, W. G. Dumb holes: analogues for black holes. Phil. Trans. R. Soc. A
 {\bf 366}, 2905-2913 (2008).
 
-\bibitem {19} Rousseaux, G., Mathis C., Maïssa, Philippe, P., Thomas G., \& Leonhardt, U.
+\bibitem {19} Rousseaux, G., Mathis C., Massa, Philippe, P., Thomas G., \& Leonhardt, U.
 Observation of negative-frequency waves in a water tank: a classical analogue
 to the Hawking effect? New Journal of Physics {\bf 10} 053015 (2008)
 
