--- a/1511.08221/1511.08221.tex
+++ b/1511.08221/1511.08221.tex
@@ -3,6 +3,9 @@
 \input color
 %\input stables
 
+%\magnification=\magstep1
+\footskip=11pt
+
 \def\Title#1#2{\rightline{#1}\ifx\answ\bigans\nopagenumbers\pageno0\vskip1in
 \else\pageno1\vskip.8in\fi \centerline{\titlefont #2}\vskip .5in}
 
@@ -109,6 +112,7 @@
  \def\smc{{\smash :}}
  \def\tX{{\tilde X}}
 
+\tolerance=2000
 
 \def\mthsu{\mathsurround=0pt  }
 \def\leftrightarrowfill{$\mthsu \mathord\leftarrow\mkern-6mu\cleaders
