--- a/1703.02143/1703.02143.tex
+++ b/1703.02143/1703.02143.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 \usepackage{graphics, color}
 \usepackage{graphicx}
@@ -34,14 +34,16 @@
 \newcommand{\transd}{d}
 \newcommand{\mypar}{{\scriptscriptstyle \|}}
 
-\textwidth = 6.5 in
-\textheight = 8.5 in
-\oddsidemargin = 0.0 in
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage{hyperref}
+\urlstyle{same}
+\hypersetup{colorlinks=true}
+\hypersetup{urlcolor=blue}
+\hypersetup{linkcolor=blue}
+\hypersetup{citecolor=blue}
+\usepackage[letterpaper, margin=1.25in]{geometry}
 
-\evensidemargin = 0.0 in
-%\topmargin = -1.0 in
-\headheight = 0.0 in
-\headsep = 0.0 in
 \parskip = 0.03in
 %\parindent = 0.0in
 \arraycolsep 2pt
@@ -146,7 +148,7 @@ The second natural way to restore unitarity is to suppose that there are additio
 \label{Page}
 
 However, as argued by Page \cite{Page:1993df}, a related problem involving the Bekenstein-Hawking entropy
-$S_{BH} = A/4\hbar G$ in fact arises much earlier in the evaporation process.  Since $S_{BH}$ satisfies the first and second laws of thermodynamics, it is natural to assume that number of internal states available to a black hole with given surface area $A$ is $e^{S_{BH}}$.  In particular, this number should include the states of any baby universes formed from our black hole thus far, as there is no separate term in either the first or second law to account for such offspring.  Thus $S_{BH}$ would be an upper bound on the von Neumann entropy $\rm{Tr} (\rho {\rm log} \rho)$ for any black hole.  But interchanging ingoing and outgoing modes above shows that -- so long as the black hole remains large enough for semi-classical reasoning to apply over timescales of order $1/T$ -- the von Neumann entropy of the black hole must increase by roughly one bit for each emitted Hawking photon.
+$S_{BH} = A/4\hbar G$ in fact arises much earlier in the evaporation process.  Since $S_{BH}$ satisfies the first and second laws of thermodynamics, it is natural to assume that number of internal states available to a black hole with given surface area $A$ is $e^{S_{BH}}$.  In particular, this number should include the states of any baby universes formed from our black hole thus far, as there is no separate term in either the first or second law to account for such offspring.  Thus $S_{BH}$ would be an upper bound on the von Neumann entropy ${\rm{Tr}} (\rho\, {\rm log}\, \rho)$ for any black hole.  But interchanging ingoing and outgoing modes above shows that -- so long as the black hole remains large enough for semi-classical reasoning to apply over timescales of order $1/T$ -- the von Neumann entropy of the black hole must increase by roughly one bit for each emitted Hawking photon.
 
 This is now a real problem.  Evaporation causes the black hole to shrink, and thus to reduce its surface area.  So $S_{BH}$ decreases at a steady rate.  On the other hand, the actual von Neumann entropy of the black hole must increase at a steady rate.  But the first must be larger than the second.   So some contradiction is reached at a finite time.  For a black hole that begins in a pure state, this is readily seen to occur when $S_{BH}$ has been reduced to half of its initial value.  This is known as the Page time $t_{Page}$.  For $4d$ asymptotically-flat Schwarzschild black holes of initial radius $R_0$ one finds $t_{Page} \sim R_0^3/\ell_{Planck}^2$ in terms of the Planck length $\ell_{Planck}.$   But in any case one sees that for large $R_0$ the black hole remains far from the Planck scale at $t_{Page}$ as the area of the black hole has decreased only by a factor of $2$.  So as opposed to the case in the late-time regime discussed above, strong quantum corrections before $t_{Page}$ would be a great surprise.
 
