fix layout in Marolf - Unitarity and Holography in Gravitational Physics (2008) 0808.2842v3

--- a/0808.2842/UnitarityPRD3.tex
+++ b/0808.2842/UnitarityPRD3.tex
@@ -748,23 +748,29 @@ where $n^a$ is an appropriately normalized (null) normal to the surfaces ${\cal 
 At this point, we wish to choose some (fixed) retarded time $u_1$ on $I^+$ and use it to divide $h(v-\tau)$ into two parts.  The part associated via (\ref{forward}) with $u < u_1$ on $I^+$ belongs to the algebra ${\cal A}_{u_1}^+$ of interest.  The rest is the error term from the tail that needs to be controlled.  We thus define the error term as
 
 \begin{equation}
+\begin{split}
 \label{forward}
-\Delta(v - \tau, u_1) = \int_{x \in {\cal H}}  G^+(v-\tau, x)   (n^a  \stackrel
-{\leftrightarrow} {\frac{ \partial}{\partial x^a} }) h(x) +  \int_{x \in {I^+}, u(x) \ge u_1}  G^+(v-\tau, x)   (n^a  \stackrel
+\Delta(v - \tau, u_1) &= \int_{x \in {\cal H}}  G^+(v-\tau, x)   (n^a  \stackrel
+{\leftrightarrow} {\frac{ \partial}{\partial x^a} }) h(x)\\
+& +  \int_{x \in {I^+}, u(x) \ge u_1}  G^+(v-\tau, x)   (n^a  \stackrel
 {\leftrightarrow} {\frac{ \partial}{\partial x^a} }) h(x) .
+\end{split}
 \end{equation}
 
 To evaluate the contributions of $\Delta(v-\tau, u_1)$, it is useful to {\rm again} express $\Delta(v-\tau, u_1)$ in terms of the original fields on $I^-$ by again using the free field Green's functions\footnote{The reason that this is useful is that, since we specify the state on $I^-$, it is easier to understand the effect of 
 $\Delta(v-\tau, u_1)$ when expressed in terms of operators on $I^-$.}.  We have
 
-\begin{eqnarray}
+\begin{equation}
+\begin{split}
 \label{forback}
-\Delta(v - \tau, u_1) &=& \int_{x \in {\cal H}} \int_{y \in I^-} G^+(v-\tau, x)   (n^a  \stackrel
+\Delta(v - \tau, u_1) &= \int_{x \in {\cal H}} \int_{y \in I^-} G^+(v-\tau, x)   (n^a  \stackrel
 {\leftrightarrow} {\frac{ \partial}{\partial x^a} }) G^-(x, y)   (n^a  \stackrel
-{\leftrightarrow} {\frac{ \partial}{\partial y^a} })  h(y) \cr &+&  \int_{x \in {I^+}, u(x) \ge u_1}  \int_{y \in I^-} G^+(v-\tau, x)   (n^a  \stackrel
+{\leftrightarrow} {\frac{ \partial}{\partial y^a} })  h(y) \\
+ &+  \int_{x \in {I^+}, u(x) \ge u_1}  \int_{y \in I^-} G^+(v-\tau, x)   (n^a  \stackrel
 {\leftrightarrow} {\frac{ \partial}{\partial x^a} }) G^-(x, y)   (n^a  \stackrel
 {\leftrightarrow} {\frac{ \partial}{\partial y^a} })  h(y) .
-\end{eqnarray}
+\end{split}
+\end{equation}
 
 To package this result in a transparent way, note that (\ref{forback}) may be written in the form
 
@@ -775,19 +781,21 @@ To package this result in a transparent way, note that (\ref{forback}) may be wr
 \end{equation}
 where we have defined 
 
-\begin{equation}
+\begin{eqnarray}
 \label{Dcoeffs}
-\Delta(v - \tau, u_1, y )=\int_{x \in {\cal H}}  G^+(v-\tau, x)   (n^a  \stackrel
-{\leftrightarrow} {\frac{ \partial}{\partial x^a} }) G^-(x, y) +  \int_{x \in {I^+}, u(x) \ge u_1} G^+(v-\tau, x)   (n^a  \stackrel
+\Delta(v - \tau, u_1, y )&=& \int_{x \in {\cal H}}  G^+(v-\tau, x)   (n^a  \stackrel
+{\leftrightarrow} {\frac{ \partial}{\partial x^a} }) G^-(x, y) \nonumber\\ 
+&+&  \int_{x \in {I^+}, u(x) \ge u_1} G^+(v-\tau, x)   (n^a  \stackrel
 {\leftrightarrow} {\frac{ \partial}{\partial x^a} }) G^-(x, y)  .
-\end{equation}
+\end{eqnarray}
 
 Our goal is to show that the coefficients $\Delta(v - \tau, u_1, y )$ vanish as some power law in $v-\tau$ in the limit $\tau \rightarrow \infty$ for each $y$.  A simple way to do so is to note that since both ${\cal H}$ and $I^+$ are null surfaces, the null normals $n^a$ are in fact tangent to the respective surfaces.  Thus, we may perform integrations by parts so that all of the derivatives act on factors of $G^-(x, y)$.  I.e, we may write
 
 \begin{eqnarray}
 \label{Dcoeffs2}
 \Delta(v - \tau, u_1, y )&=& 2 \int_{x \in {\cal H}}  G^+(v-\tau, x)   (n^a  
- {\frac{ \partial}{\partial x^a} }) G^-(x, y) +  \int_{x \in {I^+}, u(x) \ge u_1} G^+(v-\tau, x)   (n^a  
+ {\frac{ \partial}{\partial x^a} }) G^-(x, y) \nonumber\\ 
+ &+&  \int_{x \in {I^+}, u(x) \ge u_1} G^+(v-\tau, x)   (n^a  
  {\frac{ \partial}{\partial x^a} }) G^-(x, y) \cr  &+& {\rm boundary \ term \ at \ {\cal H} \ vertex },
 \end{eqnarray}
 where (due to Price's law \cite{GPP,DR}) the only non-zero boundary term is at the ``vertex'' of the future horizon (i.e., the point at which, due to spherical symmetry, all horizon generators meet in a caustic).
