--- a/1409.1231/jerusalemarxivfinal.tex
+++ b/1409.1231/jerusalemarxivfinal.tex
@@ -1,6 +1,22 @@
 \documentclass[12pt]{article}
+
+%\usepackage{mathptm}
+%\linespread{1.05}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.25in]{geometry}
+
 \pdfoutput=1
 \usepackage{jheppub}
+
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 %\usepackage{showlabels}
 \usepackage{verbatim}
 \newcommand{\D}{\mathcal{D}}
@@ -23,6 +39,9 @@
 \newcommand{\mO}{\mathcal{O}}
 \newcommand{\tO}{\widetilde{\mathcal{O}}}
 \newcommand{\wt}{\widetilde}
+
+\sloppy
+
 \begin{document}
 %\subheader{blank}
 \title{Jerusalem Lectures on Black Holes and Quantum Information}
