--- a/0303056v3/0303056v3.tex
+++ b/0303056v3/0303056v3.tex
@@ -21,10 +21,24 @@ zanghi@ge.infn.it}
 }
 \date{July 15, 2004}
 
-\addtolength{\textwidth}{2.0cm}
-\addtolength{\hoffset}{-1.0cm}
-\addtolength{\textheight}{3.0cm}
-\addtolength{\voffset}{-1.5cm}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 \newcommand{\z}{\marginpar{changed}}
 \newcommand{\CCC}{\mathbb{C}} % complex numbers
@@ -142,6 +156,7 @@ quantum mechanics), 02.50.-r (probability theory, stochastic
 processes, and statistics), 03.70.+k (theory of quantized fields)
 \end{abstract}
 
+\newpage
 \tableofcontents
 
 
@@ -655,11 +670,11 @@ To this end, one may take the following steps:
    \end{equation}
 \item Observe that $\current$ is anti-symmetric, $\current(dq',dq) = -
    \current(dq,dq')$.  Thus, since $x = x^+ - (-x)^+$,
-   \[
+   \[\begin{split}
      \current(dq,dq') = \left[(2/\hbar) \, \Im \, \sp{\Psi} {\pov(dq) H
-     \pov(dq') |\Psi}\right]^+ - \left[(2/\hbar)\, \Im \, \sp{\Psi}
+     \pov(dq') |\Psi}\right]^+ - \\ - \left[(2/\hbar)\, \Im \, \sp{\Psi}
      {\pov(dq') H \pov(dq) |\Psi}\right]^+ .
-   \]
+   \end{split}\]
 \item Multiply and divide both terms by $\measure(\,\cdot\,)$,
    obtaining that
    \begin{eqnarray*}
