--- a/0208072/0208072.tex
+++ b/0208072/0208072.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article}
-\usepackage{amsfonts,amssymb,amsmath,graphicx,hyperref}
+\usepackage{amsfonts,amssymb,amsmath,graphicx}
 
 \title{Trajectories and  Particle Creation and Annihilation in Quantum
 Field Theory}
@@ -18,6 +18,25 @@ Nino Zangh\`\i\footnote{Dipartimento di Fisica, INFN sezione di Genova,
 	Via Dodecaneso 33, 16146 Genova, Italy. E-mail: zanghi@ge.infn.it}
 }
 \date{}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
 
 \begin{document}
 
@@ -527,7 +546,7 @@ we have presented here, which is stochastic.
   Chapman and Hall (1993)
 
 %\bibitem{dB} Broglie, L.~de, in: \textit{Electrons et Photons: Rapports 
-%et Discussions du Cinquième Conseil de Physique tenu à Bruxelles du 24 
+%et Discussions du CinquiÃ¨me Conseil de Physique tenu Ã  Bruxelles du 24 
 %au 29 Octobre 1927 sous les Auspices de
 %l'Institut International de Physique Solvay}, Paris: Gauthier-Villars (1928)
 
