--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-06 21:22:26 -0500 
+%% Created for Pete Su at 2019-03-06 21:33:02 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Durr:2003gs,
+	Archiveprefix = {arXiv},
+	Author = {Durr, Detlef and Goldstein, Sheldon and Tumulka, Roderich and Zanghi, Nino},
+	Date-Added = {2019-03-06 21:32:11 -0500},
+	Date-Modified = {2019-03-06 21:32:36 -0500},
+	Doi = {10.1088/0305-4470/36/14/315},
+	Eprint = {quant-ph/0208072},
+	Journal = {J. Phys.},
+	Note = {\href{https://arxiv.org/abs/quant-ph/0208072}{arXiv:0208072}},
+	Pages = {4143-4150},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = QUANT-PH/0208072;%%},
+	Title = {{Trajectories and particle creation and annihilation in quantum field theory}},
+	Volume = {A36},
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1088/0305-4470/36/14/315}}
 
 @article{Durr2004,
 	Author = {Detlef D\"{u}rr and Sheldon Goldstein and Roderich Tumulka and Nino Zangh},
@@ -25,11 +42,11 @@
 	Year = {2004},
 	Bdsk-Url-1 = {https://doi.org/10.1007/s00220-004-1242-0}}
 
-@article{Duerr:2004rg,
+@article{Durr:2004rg,
 	Archiveprefix = {arXiv},
 	Author = {Duerr, Detlef and Goldstein, Sheldon and Tumulka, Roderich and Zanghi, Nino},
 	Date-Added = {2019-03-06 21:20:34 -0500},
-	Date-Modified = {2019-03-06 21:21:02 -0500},
+	Date-Modified = {2019-03-06 21:33:01 -0500},
 	Doi = {10.1088/0305-4470/38/4/R01},
 	Eprint = {quant-ph/0407116},
 	Journal = {J. Phys.},
