--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-06 21:33:02 -0500 
+%% Created for Pete Su at 2019-03-06 22:12:35 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Durr:2013asa,
+	Archiveprefix = {arXiv},
+	Author = {D\"urr, Detlef and Goldstein, Sheldon and Norsen, Travis and Struyve, Ward and Zangh{\`\i}, Nino},
+	Date-Added = {2019-03-06 22:11:54 -0500},
+	Date-Modified = {2019-03-06 22:12:35 -0500},
+	Doi = {10.1098/rspa.2013.0699},
+	Eprint = {1307.1714},
+	Journal = {Proc. Roy. Soc. Lond.},
+	Note = {\href{https://arxiv.org/abs/1307.1714v2}{https://arxiv.org/abs/1307.1714v2}},
+	Pages = {20130699},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:1307.1714;%%},
+	Title = {{Can Bohmian Mechanics be made Relativistic?}},
+	Volume = {A470},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1098/rspa.2013.0699}}
 
 @article{Durr:2003gs,
 	Archiveprefix = {arXiv},
