--- a/9512027v1/9512027v1.tex
+++ b/9512027v1/9512027v1.tex
@@ -3,11 +3,32 @@
 %Date: Tue, 26 Dec 1995 11:44:07 -0500
 
 %This paper is in pure LaTeX.
-\documentstyle[12pt]{article}
+\documentclass[12pt]{article}
 %\flushbottom
-\textwidth 15cm
-\textheight 22cm
-\topmargin -10mm
+%\textwidth 15cm
+%\textheight 22cm
+%\topmargin -10mm
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.4in]{geometry}
+
+
 \newcommand\bq{\begin{quotation}}
 \newcommand\eq{\end{quotation}}
 \newcommand\sig{\bf\sigma}
