--- a/9512027v1/9512027v1.tex
+++ b/9512027v1/9512027v1.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-%\usepackage[noBBpl]{mathpazo}
+\usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.4in]{geometry}
 
@@ -34,8 +34,7 @@ bookmarksopenlevel=10
 \newcommand\sig{\bf\sigma}
 
 \usepackage{sectsty}
-\sectionfont{\fontsize{14}{16}\selectfont}
-
+\allsectionsfont{\fontsize{12}{14}\selectfont\centering}
 \makeatletter
 \renewcommand\@seccntformat[1]{}
 \makeatother
